# andromeda-pixel

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: python.yml
flaskr/: __init__.py  schema.sql
flaskr/blueprints/: core.py  htmx.py
flaskr/static/css/: base.css
flaskr/static/js/: base.js
flaskr/templates/: gallery.html  images.html  index.html  upload_image.html
static/js/: base.js
templates/: gallery.html  images.html  index.html
