[project]
name = "my-andromeda-galaxy-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "flask>=3.1.1",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.12.2",
]

[tool.djlint]
ignore = "H006"
